<resources>
    <string name="app_name">AppMovies</string>
    <string name="o_senhor_dos_an_is">O Senhor dos Anéis</string>
    <string name="o_senhor_dos_an_is_a_sociedade_do_an_l">O Senhor dos Anéis: A Sociedade do Anél</string>
    <string name="app_movies">APP Movies</string>
    <string name="ver_filmes">Ver Filmes</string>
    <string name="ano_2001">Ano: 2001</string>
    <string name="numa_terra_fant_stica_e_nica_chamada_terra_m_dia_um_hobbit_seres_de_estatura_entre_80_cm_e_1_20_m_com_p_s_peludos_e_bochechas_um_pouco_avermelhadas_recebe_de_presente_de_seu_tio_o_um_anel_um_anel_m_gico_e_maligno_que_precisa_ser_destru_do_antes_que_caia_nas_m_os_do_mal_para_isso_o_hobbit_frodo_elijah_woods_ter_um_caminho_rduo_pela_frente_onde_encontrar_perigo_medo_e_personagens_bizarros_ao_seu_lado_para_o_cumprimento_desta_jornada_aos_poucos_ele_poder_contar_com_outros_hobbits_um_elfo_um_an_o_dois_humanos_e_um_mago_totalizando_9_pessoas_que_formar_o_a_sociedade_do_anel">Numa terra fantástica e única, chamada Terra-Média, um hobbit (seres de estatura entre 80 cm e 1,20 m, com pés peludos e bochechas um pouco avermelhadas) recebe de presente de seu tio o Um Anel, um anel mágico e maligno que precisa ser destruído antes que caia nas mãos do mal. Para isso o hobbit Frodo (Elijah Woods) terá um caminho árduo pela frente, onde encontrará perigo, medo e personagens bizarros. Ao seu lado para o cumprimento desta jornada aos poucos ele poderá contar com outros hobbits, um elfo, um anão, dois humanos e um mago, totalizando 9 pessoas que formarão a Sociedade do Anel.</string>
    <string name="g_nero">Gênero</string>
    <string name="tempo">Tempo</string>
    <string name="ano">Ano</string>
    <string name="relev_ncia">Relevância</string>
    <string name="o_senhor_dos_an_is_a_sociedade_do_anel">O Senhor dos Anéis: A Sociedade do Anel</string>
    <string name="fantasia">Fantasia</string>
    <string name="synopsis">Synopsis</string>
    <string name="aventura">Aventura</string>
    <string name="_223_min">223 min</string>
    <string name="entrar">Entrar</string>
    <string name="titulo">Titulo</string>
    <string name="overview_here">overview here</string>
    <string name="relevence">Relevence</string>
    <string name="title_movie_list">Title_movie_list</string>
    <string name="time_in_min">Time in min</string>
    <string name="here">here</string>
    <string name="relevance">Relevance:</string>
    <string name="relevance_here">relevance here</string>
    <string name="genre_here">genre here</string>
    <string name="genre">Genre:</string>
    <string name="year_here">year here</string>
    <string name="year">Year:</string>
    <string name="min">min</string>
    <string name="genero">genero</string>
    <string name="to_10_0">to 10.0</string>
    <string name="time">Time</string>
    <string name="popularity">Popularity:</string>
    <string name="popularity_here">popularity here</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Popular</string>
    <string name="realese">Realese:</string>
    <string name="choose_the_movies_list_you_want_to_review_below">Choose the movies list you want to review below</string>
    <string name="favorite">Favorite</string>
</resources>