<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/painel_movie_list"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:background="#03021e"
    android:orientation="horizontal"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/movie_poster"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/no_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/title_movie_list"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/title_movie_list"
        android:textColor="#a7974c"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@id/movie_relevance_list"
        app:layout_constraintLeft_toRightOf="@id/movie_poster"
        app:layout_constraintStart_toEndOf="@id/movie_poster"
        app:layout_constraintTop_toTopOf="@id/painel_movie_list"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/movie_relevance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/relevance"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/movie_year"
        app:layout_constraintStart_toEndOf="@id/movie_poster"
        app:layout_constraintTop_toBottomOf="@id/title_movie_list" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/movie_relevance_list"
        android:background="@drawable/star_button"
        android:text="value"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/movie_year_list"
        app:layout_constraintStart_toEndOf="@id/movie_relevance"
        app:layout_constraintTop_toBottomOf="@id/title_movie_list"
        android:layout_width="60dp"
        android:layout_height="60dp" />

    <TextView
        android:id="@+id/movie_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:background="@drawable/calendario"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/painel_movie_list"
        app:layout_constraintStart_toEndOf="@id/movie_poster"
        app:layout_constraintTop_toBottomOf="@id/movie_relevance" />

    <TextView
        android:id="@+id/movie_year_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="sans-serif"
        android:text="@string/year_here"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/painel_movie_list"
        app:layout_constraintStart_toEndOf="@id/movie_year"
        app:layout_constraintTop_toBottomOf="@id/movie_relevance" />

</androidx.constraintlayout.widget.ConstraintLayout>